@@ -3,14 +3,19 @@ Date: Sat, 29 Oct 2016 17:55:02 +0200
 Subject: Default configuration file for debian
 
 ---
- src/cf.data.pre | 10 ++++++----
- 1 file changed, 6 insertions(+), 4 deletions(-)
+ src/cf.data.pre | 11 +++++++----
+ 1 file changed, 7 insertions(+), 4 deletions(-)
 
 diff --git a/src/cf.data.pre b/src/cf.data.pre
-index 79f1e3d0..fc594bca 100644
+index 588e0f81..c1356475 100644
 --- a/src/cf.data.pre
 +++ b/src/cf.data.pre
-@@ -1618,7 +1618,7 @@ http_access deny manager
+@@ -1693,11 +1693,12 @@ http_access deny manager
+ #
+ # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
+ #
++include /etc/squid/conf.d/*
+ 
  # Example rule allowing access from your local networks.
  # Adapt localnet in the ACL section to list your (internal) IP networks
  # from where browsing should be allowed
@@ -19,7 +24,7 @@ index 79f1e3d0..fc594bca 100644
  http_access allow localhost
  
  # And finally deny all other access to this proxy
-@@ -4698,7 +4698,7 @@ DOC_END
+@@ -4815,7 +4816,7 @@ DOC_END
  
  NAME: logfile_rotate
  TYPE: int
@@ -28,7 +33,7 @@ index 79f1e3d0..fc594bca 100644
  LOC: Config.Log.rotateNumber
  DOC_START
  	Specifies the default number of logfile rotations to make when you
-@@ -4722,6 +4722,8 @@ DOC_START
+@@ -4839,6 +4840,8 @@ DOC_START
  	in the habit of using 'squid -k rotate' instead of 'kill -USR1
  	<pid>'.
  
@@ -37,7 +42,7 @@ index 79f1e3d0..fc594bca 100644
  DOC_END
  
  NAME: mime_table
-@@ -9303,8 +9305,8 @@ DOC_START
+@@ -9418,8 +9421,8 @@ DOC_START
  
  	WARNING:
  	  This option will restrict the situations under which IPv6
